<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">NerdDinner for Android</string>
	<string name="zoom_in">Zoom In</string>
	<string name="zoom_out">Zoom Out</string>
	<string name="map_mode">Map Mode</string>
	<string name="satellite">Satellite View</string>
	<string name="traffic">Traffic View</string>
	<string name="streetview">Street View</string>
	<string name="bookmarkview">Show Bookmarks</string>
	<string name="settings">Settings</string>
	<string name="find">Find Dinner</string>
	<string name="center_gps">My Location</string>
	<string name="track_gps">Track Location</string>
	<string name="compass">Show Compass</string>
	<string name="add_dinner">Add Dinner</string>
	<string name="saveButton">Save</string>
	<string name="dinners">Dinners</string>
	<string name="name">Your Name</string>
	<string name="description">Description</string>
	<string name="empty_list">No entries</string>
	<string name="joinin_dinner">Join in</string>
	<string name="delete_dinner">Delete Dinner</string>
	<string name="bkm_count">Count</string>
	<string name="bkm_goto">View</string>
	<string name="bkm_edit">Edit</string>
	<string name="bkm_delete">Delete</string>
	<string name="latitude">lat</string>
	<string name="longitude">lon</string>
	<string name="dinner_title">Title</string>
	<string name="dinner_date">Event Date</string>
	<string name="dinner_desc">Description</string>
	<string name="dinner_hostname">Host Name</string>
	<string name="dinner_cinfo">Contact Info</string>
	<string name="dinner_address">Address, City, State, ZIP</string>
	<string name="dinner_country">Country</string>	
	<string name="view_dinner">View Dinner</string>
	<string name="when">When</string>
	<string name="where">Where</string>	
	<string name="organizer">Organizer</string>
	<string name="desc">Description</string>
	<string name="whos_coming">Who\'s Coming:</string>
	<string name="add_tocalendar">Add event to Calendar</string>
	<string name="no_attendees">No RSVPs</string>
	<string name="attendees">RSVP for event</string>
	<string name="remote_service_started">Service started</string>
	<string name="remote_service_stopped">Service stopped</string>
	<string name="remote_service_connected">Service connected</string>
	<string name="remote_service_disconnected">Service disconnected</string>
	<string name="start_button">Start</string>
	<string name="stop_button">Stop</string>
</resources>
